c_bindings/bindings.rs

pub const atOWNER: u32 = 2;
pub const atDESTINATION: u32 = 3;
pub const atISSUER: u32 = 4;
pub const atAUTHORIZE: u32 = 5;
pub const atUNAUTHORIZE: u32 = 6;
pub const atTARGET: u32 = 7;
pub const atREGULARKEY: u32 = 8;
pub const atPSEUDOCALLBACK: u32 = 9;
pub const amAMOUNT: u32 = 1;
pub const amBALANCE: u32 = 2;
pub const amLIMITAMOUNT: u32 = 3;
pub const amTAKERPAYS: u32 = 4;
pub const amTAKERGETS: u32 = 5;
pub const amLOWLIMIT: u32 = 6;
pub const amHIGHLIMIT: u32 = 7;
pub const amFEE: u32 = 8;
pub const amSENDMAX: u32 = 9;
pub const amDELIVERMIN: u32 = 10;
pub const amMINIMUMOFFER: u32 = 16;
pub const amRIPPLEESCROW: u32 = 17;
pub const amDELIVEREDAMOUNT: u32 = 18;
pub const ENCODE_TL_SIZE: u32 = 49;
pub const ENCODE_DROPS_SIZE: u32 = 9;
pub const ENCODE_TT_SIZE: u32 = 3;
pub const ENCODE_ACCOUNT_SIZE: u32 = 22;
pub const ENCODE_ACCOUNT_SRC_SIZE: u32 = 22;
pub const ENCODE_ACCOUNT_DST_SIZE: u32 = 22;
pub const ENCODE_UINT32_COMMON_SIZE: u32 = 5;
pub const ENCODE_UINT32_UNCOMMON_SIZE: u32 = 6;
pub const ENCODE_LLS_SIZE: u32 = 6;
pub const ENCODE_FLS_SIZE: u32 = 6;
pub const ENCODE_TAG_SRC_SIZE: u32 = 5;
pub const ENCODE_TAG_DST_SIZE: u32 = 5;
pub const ENCODE_SEQUENCE_SIZE: u32 = 5;
pub const ENCODE_FLAGS_SIZE: u32 = 5;
pub const ENCODE_SIGNING_PUBKEY_SIZE: u32 = 35;
pub const ENCODE_SIGNING_PUBKEY_NULL_SIZE: u32 = 35;
pub const PREPARE_PAYMENT_SIMPLE_SIZE: u32 = 237;
pub const PREPARE_PAYMENT_SIMPLE_TRUSTLINE_SIZE: u32 = 277;
extern "C" {
    pub fn hook(reserved: i64) -> i64;
}
extern "C" {
    pub fn cbak(reserved: i64) -> i64;
}
extern "C" {
    #[doc = " Guard function. Each time a loop appears in your code a call to this must be the first branch instruction after the"]
    #[doc = " beginning of the loop."]
    #[doc = " @param id The identifier of the guard (typically the line number)."]
    #[doc = " @param maxiter The maximum number of times this loop will iterate across the life of the hook."]
    #[doc = " @return Can be ignored. If the guard is violated the hook will terminate."]
    pub fn _g(id: u32, maxiter: u32) -> i32;
}
extern "C" {
    #[doc = " Accept the originating transaction and commit all hook state changes and submit all emitted transactions."]
    #[doc = " @param read_ptr An optional string to use as a return comment. May be 0."]
    #[doc = " @param read_len The length of the string. May be 0."]
    #[doc = " @return Will never return, terminates the hook."]
    pub fn accept(read_ptr: u32, read_len: u32, error_code: i64) -> i64;
}
extern "C" {
    #[doc = " Rollback the originating transaction, discard all hook state changes and emitted transactions."]
    #[doc = " @param read_ptr An optional string to use as a return comment. May be 0."]
    #[doc = " @param read_len The length of the string. May be 0."]
    #[doc = " @return Will never return, terminates the hook."]
    pub fn rollback(read_ptr: u32, read_len: u32, error_code: i64) -> i64;
}
extern "C" {
    #[doc = " Read a 20 byte account-id from the memory pointed to by read_ptr of length read_len and encode it to a base58-check"]
    #[doc = " encoded r-address."]
    #[doc = " @param read_ptr The memory address of the account-id"]
    #[doc = " @param read_len The byte length of the account-id (should always be 20)"]
    #[doc = " @param write_ptr The memory address of a suitable buffer to write the encoded r-address into."]
    #[doc = " @param write_len The size of the write buffer."]
    #[doc = " @return On success the length of the r-address will be returned indicating the bytes written to the write buffer."]
    #[doc = "         On failure a negative integer is returned indicating what went wrong."]
    pub fn util_raddr(write_ptr: u32, write_len: u32, read_ptr: u32, read_len: u32) -> i64;
}
extern "C" {
    #[doc = " Read an r-address from the memory pointed to by read_ptr of length read_len and decode it to a 20 byte account id"]
    #[doc = " and write to write_ptr"]
    #[doc = " @param read_ptr The memory address of the r-address"]
    #[doc = " @param read_len The byte length of the r-address"]
    #[doc = " @param write_ptr The memory address of a suitable buffer to write the decoded account id into."]
    #[doc = " @param write_len The size of the write buffer."]
    #[doc = " @return On success 20 will be returned indicating the bytes written. On failure a negative integer is returned"]
    #[doc = "         indicating what went wrong."]
    pub fn util_accid(write_ptr: u32, write_len: u32, read_ptr: u32, read_len: u32) -> i64;
}
extern "C" {
    #[doc = " Verify a cryptographic signature either ED25519 of SECP256k1. Public key should be prefixed with 0xED for 25519."]
    #[doc = " @param dread_ptr The memory location of the data or payload to verify"]
    #[doc = " @param dread_len The length of the data or payload to verify"]
    #[doc = " @param sread_ptr The memory location of the signature"]
    #[doc = " @param sread_len The length of the signature"]
    #[doc = " @param kread_ptr The memory location of the public key"]
    #[doc = " @param kread_len The length of the public key"]
    #[doc = " @return True if and only if the signature was verified."]
    pub fn util_verify(
        dread_ptr: u32,
        dread_len: u32,
        sread_ptr: u32,
        sread_len: u32,
        kread_ptr: u32,
        kread_len: u32,
    ) -> i64;
}
extern "C" {
    #[doc = " Compute the first half of a SHA512 checksum."]
    #[doc = " @param write_ptr The buffer to write the checksum into. Must be at least 32 bytes."]
    #[doc = " @param write_len The length of the buffer."]
    #[doc = " @param read_ptr  The buffer to read data for digest from."]
    #[doc = " @param read_len  The amount of data to read from the buffer."]
    #[doc = " @return The number of bytes written to write_ptr or a negative integer on error."]
    pub fn util_sha512h(write_ptr: u32, write_len: u32, read_ptr: u32, read_len: u32) -> i64;
}
extern "C" {
    #[doc = " Index into a xrpld serialized object and return the location and length of a subfield. Except for Array subtypes"]
    #[doc = " the offset and length refer to the **payload** of the subfield not the entire subfield. Use SUB_OFFSET and"]
    #[doc = " SUB_LENGTH macros to extract return value."]
    #[doc = " @param read_ptr The memory location of the stobject"]
    #[doc = " @param read_len The length of the stobject"]
    #[doc = " @param field_id The Field Code of the subfield"]
    #[doc = " @return high-word (most significant 4 bytes excluding the most significant bit (MSB)) is the field offset relative"]
    #[doc = "         to read_ptr and the low-word (least significant 4 bytes) is its length. MSB is sign bit, if set (negative)"]
    #[doc = "         return value indicates error (typically error means could not find.)"]
    pub fn sto_subfield(read_ptr: u32, read_len: u32, field_id: u32) -> i64;
}
extern "C" {
    #[doc = " Index into a xrpld serialized array and return the location and length of an index. Unlike sto_subfield this api"]
    #[doc = " always returns the offset and length of the whole object at that index (not its payload.) Use SUB_OFFSET and"]
    #[doc = " SUB_LENGTH macros to extract return value."]
    #[doc = " @param read_ptr The memory location of the stobject"]
    #[doc = " @param read_len The length of the stobject"]
    #[doc = " @param array_id The index requested"]
    #[doc = " @return high-word (most significant 4 bytes excluding the most significant bit (MSB)) is the field offset relative"]
    #[doc = "         to read_ptr and the low-word (least significant 4 bytes) is its length. MSB is sign bit, if set (negative)"]
    #[doc = "         return value indicates error (typically error means could not find.)"]
    pub fn sto_subarray(read_ptr: u32, read_len: u32, array_id: u32) -> i64;
}
extern "C" {
    pub fn sto_validate(read_ptr: u32, read_len: u32) -> i64;
}
extern "C" {
    pub fn sto_emplace(
        write_ptr: u32,
        write_len: u32,
        sread_ptr: u32,
        sread_len: u32,
        fread_ptr: u32,
        fread_len: u32,
        field_id: u32,
    ) -> i64;
}
extern "C" {
    pub fn sto_erase(
        write_ptr: u32,
        write_len: u32,
        read_ptr: u32,
        read_len: u32,
        field_id: u32,
    ) -> i64;
}
extern "C" {
    pub fn util_keylet(
        write_ptr: u32,
        write_len: u32,
        keylet_type: u32,
        a: u32,
        b: u32,
        c: u32,
        d: u32,
        e: u32,
        f: u32,
    ) -> i64;
}
extern "C" {
    #[doc = " Compute burden for an emitted transaction."]
    #[doc = " @return the burden a theoretically emitted transaction would have."]
    pub fn etxn_burden() -> i64;
}
extern "C" {
    #[doc = " Write a full emit_details stobject into the buffer specified."]
    #[doc = " @param write_ptr A sufficiently large buffer to write into."]
    #[doc = " @param write_len The length of that buffer."]
    #[doc = " @return The number of bytes written or a negative integer indicating an error."]
    pub fn etxn_details(write_ptr: u32, write_len: u32) -> i64;
}
extern "C" {
    #[doc = " Compute the minimum fee required to be paid by a hypothetically emitted transaction based on its size in bytes."]
    #[doc = " @param The size of the emitted transaction in bytes"]
    #[doc = " @return The minimum fee in drops this transaction should pay to succeed"]
    pub fn etxn_fee_base(tx_byte_count: u32) -> i64;
}
extern "C" {
    #[doc = " Inform xrpld that you will be emitting at most @count@ transactions during the course of this hook execution."]
    #[doc = " @param count The number of transactions you intend to emit from this  hook."]
    #[doc = " @return If a negaitve integer an error has occured"]
    pub fn etxn_reserve(count: u32) -> i64;
}
extern "C" {
    #[doc = " Compute the generation of an emitted transaction. If this hook was invoked by a transaction emitted by a previous"]
    #[doc = " hook then the generation counter will be 1+ the previous generation counter otherwise it will be 1."]
    #[doc = " @return The generation of a hypothetically emitted transaction."]
    pub fn etxn_generation() -> i64;
}
extern "C" {
    #[doc = " Emit a transaction from this hook."]
    #[doc = " @param read_ptr Memory location of a buffer containing the fully formed binary transaction to emit."]
    #[doc = " @param read_len The length of the transaction."]
    #[doc = " @return A negative integer if the emission failed."]
    pub fn emit(write_ptr: u32, write_len: u32, read_ptr: u32, read_len: u32) -> i64;
}
extern "C" {
    #[doc = " Retrieve the account the hook is running on."]
    #[doc = " @param write_ptr A buffer of at least 20 bytes to write into."]
    #[doc = " @param write_len The length of that buffer"]
    #[doc = " @return The number of bytes written into the buffer of a negative integer if an error occured."]
    pub fn hook_account(write_ptr: u32, write_len: u32) -> i64;
}
extern "C" {
    #[doc = " Retrieve the hash of the currently executing hook."]
    #[doc = " @param write_ptr A buffer of at least 32 bytes to write into."]
    #[doc = " @param write_len The length of that buffer"]
    #[doc = " @return The number of bytes written into the buffer of a negative integer if an error occured."]
    pub fn hook_hash(write_ptr: u32, write_len: u32) -> i64;
}
extern "C" {
    #[doc = " Retrive the currently recommended minimum fee for a transaction to succeed."]
    pub fn fee_base() -> i64;
}
extern "C" {
    #[doc = " Retrieve the current ledger sequence number"]
    pub fn ledger_seq() -> i64;
}
extern "C" {
    pub fn ledger_last_hash(write_ptr: u32, write_len: u32) -> i64;
}
